cmake_minimum_required(VERSION 2.8)

project(Solutions)

add_library(solution "solution.cpp")
add_library(vowelsquare "vowelsquare.cpp")
add_library(palindromenumber "palindromenumber.cpp")
add_library(addtwonumbers "addtwonumbers.cpp")
add_library(closestenemy "closestenemy.cpp")
add_library(laststoneweight "laststoneweight.cpp")
add_library(stringsort "stringsort.cpp")
add_library(isunique "isunique.cpp")
add_library(arepermutations "arepermutations.cpp")
add_library(urlify "urlify.cpp")
add_library(palindromepermutation "palindromepermutation.cpp")
add_library(oneaway "oneaway.cpp")

target_link_libraries(vowelsquare solution)
target_link_libraries(palindromenumber solution)
target_link_libraries(addtwonumbers solution)
target_link_libraries(closestenemy solution)
target_link_libraries(laststoneweight solution)
target_link_libraries(stringsort solution)
target_link_libraries(isunique solution)
target_link_libraries(arepermutations solution)
target_link_libraries(urlify solution)
target_link_libraries(palindromepermutation solution)
target_link_libraries(oneaway solution)
