cmake_minimum_required(VERSION 2.8)

project(Solutions)

add_library(solution "solution.cpp")
add_library(vowelsquare "vowelsquare.cpp" "solutionio.cpp")
add_library(palindromenumber "palindromenumber.cpp" "solutionio.cpp")
add_library(addtwonumbers "addtwonumbers.cpp" "solutionio.cpp")
add_library(closestenemy "closestenemy.cpp" "solutionio.cpp")
add_library(laststoneweight "laststoneweight.cpp" "solutionio.cpp")
add_library(stringsort "stringsort.cpp" "solutionio.cpp")
add_library(isunique "isunique.cpp" "solutionio.cpp")
add_library(arepermutations "arepermutations.cpp" "solutionio.cpp")
add_library(urlify "urlify.cpp" "solutionio.cpp")
add_library(palindromepermutation "palindromepermutation.cpp" "solutionio.cpp")
add_library(oneaway "oneaway.cpp" "solutionio.cpp")
add_library(compressstring "compressstring.cpp" "solutionio.cpp")
add_library(rotatematrix "rotatematrix.cpp" "solutionio.cpp")
add_library(zeromatrix "zeromatrix.cpp" "solutionio.cpp")
add_library(stringrotation "stringrotation.cpp" "solutionio.cpp")

target_link_libraries(vowelsquare solution)
target_link_libraries(palindromenumber solution)
target_link_libraries(addtwonumbers solution)
target_link_libraries(closestenemy solution)
target_link_libraries(laststoneweight solution)
target_link_libraries(stringsort solution)
target_link_libraries(isunique solution)
target_link_libraries(arepermutations solution)
target_link_libraries(urlify solution)
target_link_libraries(palindromepermutation solution)
target_link_libraries(oneaway solution)
target_link_libraries(compressstring solution)
target_link_libraries(rotatematrix solution)
target_link_libraries(zeromatrix solution)
target_link_libraries(stringrotation solution)
